--- a/app/app.css
+++ b/app/app.css
@@ -13,30 +13,29 @@
 * limitations under the License. 
 */
 
-.menu {
-    list-style: none;
-    border-bottom: 0.1em solid black;
-    margin-bottom: 2em;
-    padding: 0 0 0.5em;
-}
-
 .ace_editor {
-    height: 400px;
+    height: 80vh;
 }
 
-.menu:before {
-    content: "[";
+html {
+    position: relative;
+    min-height: 100% !important;
+    height: 100%;
 }
 
-.menu:after {
-    content: "]";
+.body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    min-height: 100% !important;
+    height: 100%;
 }
 
-.menu>li {
-    display: inline;
-}
-
-.menu>li+li:before {
-    content: "|";
-    padding-right: 0.3em;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+    z-index: 999;
 }
